[gd_scene load_steps=11 format=3 uid="uid://c0kyicitd13x6"]

[ext_resource type="Script" uid="uid://dx5fmt671armw" path="res://scripts/ui/level_picker.gd" id="1_fp2ef"]
[ext_resource type="Texture2D" uid="uid://b02slykbjhaut" path="res://assets/images/placeholder-image.png" id="2_8r1pm"]
[ext_resource type="Theme" uid="uid://cdvnx1x2un6o8" path="res://assets/themes/btn_theme.tres" id="3_lpyf1"]
[ext_resource type="StyleBox" uid="uid://bsq0gu7c1pqjm" path="res://assets/themes/level_panels_border.tres" id="3_mhmff"]
[ext_resource type="Theme" uid="uid://kmndp1tcmq6f" path="res://assets/themes/title_theme.tres" id="3_mill3"]
[ext_resource type="StyleBox" uid="uid://beqo8irsniav2" path="res://assets/themes/level_panels_black.tres" id="4_mill3"]
[ext_resource type="Script" uid="uid://bibfmbooi65dl" path="res://scripts/ui/level_scroller.gd" id="4_sc7fl"]
[ext_resource type="Texture2D" uid="uid://bcy0nvc4ekpxx" path="res://assets/images/icon.svg" id="5_sc7fl"]
[ext_resource type="Texture2D" uid="uid://ituxbiimdjgy" path="res://assets/images/lock.png" id="8_mill3"]

[sub_resource type="Theme" id="Theme_sc7fl"]

[node name="LevelPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fp2ef")

[node name="PageStyle" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="PageStyle"]
layout_mode = 2
texture = ExtResource("2_8r1pm")
expand_mode = 2
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="PageStyle"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PageStyle/PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="LevelPanels" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -545.0
offset_right = 545.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelPanels"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Spacer3" type="Control" parent="LevelPanels/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="PageTitle" type="Label" parent="LevelPanels/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mill3")
theme_override_font_sizes/font_size = 65
text = "Pick a Level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="LevelPanels/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="LevelPanels/VBoxContainer"]
custom_minimum_size = Vector2(1700, 500)
layout_mode = 2
theme = SubResource("Theme_sc7fl")
follow_focus = true
vertical_scroll_mode = 0
scroll_deadzone = 10
script = ExtResource("4_sc7fl")

[node name="HBoxContainer" type="HBoxContainer" parent="LevelPanels/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
theme_override_constants/separation = 90

[node name="DeveloperLevelButton" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/DeveloperLevelButton"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/DeveloperLevelButton"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "Developer Playground"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level1Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level1Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level1Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "The Grasslands

Tutorial"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level1Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level2Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level2Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level2Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "Tanglewood Forest"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level2Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level2Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level2Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Level3Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level3Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level3Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "Deep Tanglewood Forest"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level3Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level3Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level3Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Level4Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level4Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level4Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "Ocean Biome"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level4Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 4"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level4Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level4Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Level5Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level5Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level5Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "Snow  Biome"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level5Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 5"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level5Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level5Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Level6Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level6Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level6Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "The Void Realm"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level6Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 6"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level6Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level6Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Level7Button" type="Button" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/hover = ExtResource("3_mhmff")
theme_override_styles/normal = ExtResource("4_mill3")
disabled = true

[node name="LevelImage" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level7Button"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
offset_left = 186.0
offset_top = 50.0
offset_right = 314.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_sc7fl")
stretch_mode = 2

[node name="LevelNameLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level7Button"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
offset_top = 248.0
offset_right = 500.0
offset_bottom = 352.0
theme = ExtResource("3_lpyf1")
text = "The Void Realm (Endless)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelNumLabel" type="Label" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level7Button"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -49.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_lpyf1")
text = "Level 7"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DimOverlay" type="ColorRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level7Button"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)

[node name="LockIcon" type="TextureRect" parent="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level7Button/DimOverlay"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_mill3")
expand_mode = 3
stretch_mode = 5

[node name="Spacer" type="Control" parent="LevelPanels/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="BackButton" type="Button" parent="LevelPanels/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_lpyf1")
text = "Go Back"
flat = true

[connection signal="pressed" from="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/DeveloperLevelButton" to="." method="_on_developer_level_button_pressed"]
[connection signal="pressed" from="LevelPanels/VBoxContainer/ScrollContainer/HBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LevelPanels/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
